Fixed spacing to show proper add event form on add event page

--- a/style.css
+++ b/style.css
@@ -494,6 +494,11 @@ header .nav-login a {
 	height: 200px;
 }
 
+/*Add Event page*/
+#addeventform {
+	padding-top: 80px;
+}
+
 /*Event Page */
 #pagecontent {
 	margin-top: 44px;
